# hft-engine

./: Cargo.toml  README.md
benches/: order_book.rs  pipeline.rs  spsc.rs
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs  messages.rs  order_book.rs
src/core/: metrics.rs  mod.rs  spsc.rs  thread.rs  types.rs
src/pipeline/: gateway.rs  market_data.rs  mod.rs  risk.rs  strategy.rs
tests/: integration_test.rs
