[package]
name = "hft-engine"
version = "0.1.0"
edition = "2024"
[lib]
name = "hft_engine"
path = "src/lib.rs"
[dependencies]
crossbeam-utils = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spsc"
harness = false
